# morituri

./: Dockerfile  README.md  pyproject.toml  setup.py
whipper/command/: cd.py
whipper/common/: encode.py  program.py
whipper/image/: toc.py
whipper/program/: cdparanoia.py
whipper/test/: diorama.cue  diorama_noutf8.toc  diorama_utf8.toc  test_common_accurip.py  test_image_toc.py  toc_cdtext_string_parsing.py
